ADD Project and member page but unfinished ADD biology in ABOUT ME page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,3 +31,9 @@ main:
     
   #- title: "Guide"
   #  url: /markdown/
+    
+  - title: "Project"
+    url: /project/
+
+  - title: "Memeber"
+    url: /member/   
