--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
   #- title: "Teaching"
   # url: /teaching/    
     
-  - title: "Portfolio"
+  - title: "Project"
     url: /portfolio/
         
   #- title: "Blog Posts"
@@ -32,8 +32,8 @@ main:
   #- title: "Guide"
   #  url: /markdown/
     
-  - title: "Project"
-    url: /project/
+  #- title: "Project"
+  #  url: /project/
 
   - title: "Memeber"
     url: /member/   
