upadte the  figure and navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,17 +8,18 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
+
+  - title: "Teaching"
+    url: /teaching/  
+
   - title: "Publications"
     url: /publications/
 
   #- title: "Talks"
   # url: /talks/    
 
-  #- title: "Teaching"
-  # url: /teaching/    
-    
-  - title: "Project"
-    url: /portfolio/
+  #- title: "Portfolio"
+  #  url: /portfolio/
         
   #- title: "Blog Posts"
   # url: /year-archive/
@@ -32,8 +33,10 @@ main:
   #- title: "Guide"
   #  url: /markdown/
     
-  #- title: "Project"
-  #  url: /project/
+  - title: "Project"
+    url: /project/
 
-  - title: "Memeber"
-    url: /member/   
+  #- title: "Memeber"
+  #  url: /member/   
+
+  
