--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default" # Currently available options are "default"
 title                    : "PAPER Group"
 title_separator          : "-"
 name                     : PolyU Group 
-description              : Leaded by Dr. LIU Junwei   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : founded by Dr. LIU Junwei   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://xuwenjie404.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -24,9 +24,9 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "LIU junwei 022.jpg" # filename of avatar image placed in /images/ for author profile
-  name             : "Liu Junwei"
+  name             : "Dr.Liu Junwei"
   pronouns         : # example: "she/her"  
-  bio              : "Nice to meet you here ！"
+  bio              : "Nice to meet you here！"
   location         : "Hong Kong"
   employer         : "PolyU"
   uri              : # URL
@@ -229,6 +229,9 @@ collections:
   talks:
     output: false
     permalink: /:collection/:path/
+  project:
+    output: true
+    permalink: /:collection/:path/
 
 
 # These settings control how pages and collections are included in the site
@@ -286,6 +289,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _project
+  - scope:
+      path: ""
+      type: project
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true   
 
 
 # Sass/SCSS
