--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "PAPER Group"
 title_separator          : "-"
 name                     : PolyU Group 
 description              : founded by Dr. LIU Junwei   # Update this with a general description of your site, this is the default if not overridden by a page
-url                      : https://xuwenjie404.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+url                      : "" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
