--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name                     : PolyU Group
 description              : founded by Dr. LIU Junwei   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : "" # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "/PAPER-Group.io" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
