Add _main.js to ignored files in config

--- a/_config.yml
+++ b/_config.yml
@@ -169,6 +169,7 @@ exclude:
   - .github
   - .jekyll-assets-cache
   - .sass-cache
+  - assets/js/_main.js
   - assets/js/plugins
   - assets/js/vendor
   - CHANGELOG
